# ReFuzzer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  Prompts.md  README.md  README.ubuntu.md  ReFuzzer.artifact.md  cmake_install.cmake  conanfile.py  generate_cpp.sh  generate_program.py  setup.sh
.github/workflows/: build.yaml
demo/: test_file__20250607_134803_885.cpp  test_file__20250607_155715_795.cpp  test_file__20250607_162516_100.cpp  test_file__20250607_212334_347.cpp  test_file__20250607_234303_0.cpp  test_file__20250608_043403_928.cpp  test_file__20250608_051854_751.cpp  test_file__20250608_090138_910.cpp  test_file__20250608_095100_842.cpp
model2/: recompile  recompile.cpp
query_generator/: .clang-format  Parser.hpp  PromptWriter.hpp  TestWriter.hpp  differential_tester.hpp  generatePrograms.py  llm_tokens_options.hpp  object_generator.hpp  query_generator.cpp  query_generator.hpp  sanitizer_processor.hpp  test_parser  test_parser.cpp
src/model2/: CMakeLists.txt  Makefile  cmake_install.cmake  recompile.cpp  recompile3.cpp  recompile_output.txt
src/query_generator/: CMakeLists.txt  CrashDetector.cpp  CrashDetector.hpp  Makefile  Parser.hpp  PromptWriter.hpp  TestWriter.hpp  cmake_install.cmake  compiler_fixer.hpp  differential_tester.hpp  llm_tokens_options.hpp  object_generator.hpp  query_generator  query_generator.cpp  recompile_output.txt  sanitizer_processor.hpp
test/: .clang-format  test_file__20241024_184217_576.cpp  test_file__20241030_220426_185.c
visuals/: error_analytics.py  histogram.py
